@@ -1,8 +1,8 @@
 This document only contains some SILC-specific information I have thought would
-be a good idea to mention. Refer to irssi2 documentation[1] for basics of
-irssi2 protocol.
+be a good idea to mention. Refer to icecap documentation[1] for basics of
+icecap protocol.
 
-1. http://dovecot.org/cgi-bin/viewcvs.cgi/irssi2/doc/#dirlist
+1. http://dovecot.org/cgi-bin/viewcvs.cgi/icecap/doc/#dirlist
 
 --
 
@@ -15,9 +15,9 @@ You need a SILC keypair (a public key and a private key) in order to connect to
 a SILC server. Your public key uniquely identifies you on a given SILC network.
 
 However, if you don't have (or don't want to use) your existing SILC key pair,
-you can simply tell irssi2 where do you want to connect, and it will generate
+you can simply tell icecap where do you want to connect, and it will generate
 a keypair for you.
-Following example makes irssi2 onnect to sauna.silcnet.org using SILC protocol,
+Following example makes icecap onnect to sauna.silcnet.org using SILC protocol,
 using nickname "johnd":
 
 1;network add;network=silcnet;protocol=silc
@@ -25,7 +25,7 @@ using nickname "johnd":
 3;gateway add;host=sauna.silcnet.org;network=silc
 4;presence connect;network=silcnet;mypresence=johnd
 
-Upon the "presence connect" command, irssi2 will look into its SILC key
+Upon the "presence connect" command, icecap will look into its SILC key
 directory for silc-gen-johnd.pub and silc-gen-johnd.prv, and load these keys,
 or it will generate and use a new keypair, which gets saved to those files.
 Next time, if you want to connect with the same presence name, these keys will
@@ -36,7 +36,7 @@ be used.
 
 --
 
-You can send your public and private keys to irssi2 along with "presence add"
+You can send your public and private keys to icecap along with "presence add"
 command, using command keys "pub_key", "prv_key", and optionally "passphrase":
 
 1;network add;network=silcnet;protocol=silc
@@ -53,14 +53,14 @@ utility:
 $ mimencode mykey.prv
 
 Passphrase ("passphrase") is being sent in plaintext - ensure that you're
-using a secure connection to irssi2 before sending it. If your private key
+using a secure connection to icecap before sending it. If your private key
 is not protected by a passphrase, you need to either omit this command key, or
 set it to an empty string ("....;passphrase=").
 
 --
 
 NOTE: Following is valid for both methods of connection.
-After irssi2 loads keys for your connection, following event is being sent back
+After icecap loads keys for your connection, following event is being sent back
 to client:
 
 *;silc_keys_loaded;id=13;time=1119990031;fingerprint=157A 5CEE 8470 FFF7 98D4  7A7A FD99 F260 77AD EB3E
@@ -73,7 +73,7 @@ loaded and will be used for connecting to SILC server.
 NICKNAME CHANGE
 ===============
 
-Remember that local presence name is unique within irssi2, and does not change
+Remember that local presence name is unique within icecap, and does not change
 with nickname changes:
 
 123;presence change;network=silcnet;mypresence=john;new_name=johnDoe
