@@ -1,18 +1,18 @@
-plugindir = $(IRSSI2_MODULEDIR)
+plugindir = $(ICECAP_MODULEDIR)
 
-plugin_LTLIBRARIES = irssi2_silc.la
+plugin_LTLIBRARIES = icecap_silc.la
 
 INCLUDES = \
-	$(IRSSI2_CFLAGS) \
+	$(ICECAP_CFLAGS) \
 	$(SILC_CFLAGS) \
 	-Wall
 
-irssi2_silc_la_LDFLAGS = \
+icecap_silc_la_LDFLAGS = \
 	-avoid-version \
 	-module \
 	$(SILC_LIBS)
 
-irssi2_silc_la_SOURCES = \
+icecap_silc_la_SOURCES = \
 	base64.c base64.h \
 	clientops.c clientops.h \
 	clientops-notify.c \
