@@ -20,8 +20,9 @@ struct presence *i_silc_presence_init(struct gateway_connection *gwconn,
 		const char *name);
 void i_silc_presence_deinit(struct presence *presence);
 
-void i_silc_presence_change_request(struct presence *presence,
-		struct event *event);
+void i_silc_presence_change_request(struct local_presence *lp,
+		struct event *event, async_change_request_callback_t *cb,
+		struct client_async_cmd_context *context);
 void i_silc_presence_status_request(struct presence *presence,
 		const char *const *status_fields,
 		presence_status_request_callback_t *cb, void *context);
