@@ -1,3 +1,7 @@
+2005-12-28 22:08  Andrej Kacian <andrej@kacian.sk>
+	* *: Updated to work with current Icecap
+	* *: Changed all occurances of "irssi2" to "icecap"
+
 2005-11-11 20:47  Andrej Kacian <andrej@kacian.sk>
 	* src: Update to work with current irssi2 CVS
 
